[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-secrets"
version = "1.0.0"
description = "Manage GPG-encrypted secrets in TOML format"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "i3oc9i", email = "i3oc9i@icloud.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/i3oc9i/my_secrets"

[project.scripts]
my-secrets = "my_secrets:main"

[project.optional-dependencies]
dev = ["poethepoet"]

[tool.poe.tasks]
clean = "rm -rf dist/ __pycache__/ *.egg-info/"
build = "uv build"
